[package]
name = "loser_case"
version = "0.1.0"
authors = ["Daniel Pendolino <daniel@counterhack.com>"]
edition = "2018"
readme = "README.md"
license = "GPL-3.0"
keywords = ["text", "string"]
description = "Return a string with random letters capitolized."

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rand = "0.7"
